# storage/api-docs/api-docs.json
@@ -351,6 +351,20 @@
                 }
             }
         },
+        "/api/userRequests": {
+            "get": {
+                "tags": [
+                    "Get User Requests"
+                ],
+                "summary": "Get User Requests",
+                "operationId": "userRequests",
+                "responses": {
+                    "200": {
+                        "description": "Get all user requests"
+                    }
+                }
+            }
+        },
         "/api/request/{id}": {
             "put": {
                 "tags": [
